2011-03-17 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallList):
	FROM files that end to a number, like program.1, automatically
	determine TO part. This allows installing manual pages without
	specifying the destination path in CYGWIN-PATCHES/install.lst file.

2011-02-11 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallMain): Call
	CygbuildCmdInstallListExists().
	(CygbuildCmdInstallListExists): New.
	(CygbuildCmdInstallList): Check common files like *.conf
	and adjust mode accordingly.

2011-02-11 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::install.lst): Fix typos.

	* bin/cygbuild.sh (CygbuildInstallExtraManual): Suport POD manual
	pages in separate directories.
	(CygbuildCmdInstallList): Compress */man/* files.

2011-02-10  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildGPGsignFiles): Dispaly message if GPG
	is not in PATH. Return success, not error to continue making package.

2010-11-21  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CYGBUILD_SRCPKG_URL): Change from
	mirrors.eu.kernel.org to ftp.heanet.ie

2010-06-24  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES):
	document install.lst to remove suffixes .sh .pl .py

	* bin/cygbuild.sh
	(top level): Update comments. Add unalias.
	(top level::CYGBUILD_INSTALL_INFO): New variable.
	(CygbuildMakefileRunInstallPythonFix): Update displayed message.
	(CygbuildPatchApplyQuiltMaybe): Improve quilt message.
	Add handling for quilt error messages.
	(CygbuildDllToLibName): Add openssl. Improve libz detection.
	(CygbuildInstallPostinstallPartEtc): Change complex
	process substitution <() to plain out/in file read.
	(CygbuildCmdInstallList): During install remove suffixes
	.sh .pl and .py. Substitute various CYGWIN-PATCHES/ prefixes.
	(CygbuildHelpShort): New section INSTALL INSTARUCTIONS .

2010-06-23  Jari Aalto  <jari.aalto@cante.net>
